# Calculator-

./: CMakeLists.txt  README.md  main.c
HAL/CLCD/: CLCD_config.h  CLCD_interface.h  CLCD_private.h  CLCD_program.c
HAL/KEYPAD/: KEYPAD_config.h  KEYPAD_interface.h  KEYPAD_private.h  KEYPAD_program.c
HAL/LED/: LED.c  LED.h
HAL/SWITCH/: SWITCH.c  SWITCH.h
MCAL/DIO/: DIO_interface.h  DIO_private.h  DIO_program.c  DIO_register.h
MCAL/PORT/: PORT_config.h  PORT_interface.h  PORT_private.h  PORT_program.c  PORT_register.h
service/: app.c  app.h
